<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/registration_layout_root"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clickable="true">


        <ImageView android:id="@+id/registration_imageView_main_icon"
               android:layout_width="150dp"
               android:layout_height="150dp"
               android:layout_gravity="center"
               android:contentDescription="@string/imageView_main_icon_description"
               android:src="@drawable/main_icon"/>

        <EditText  android:id="@+id/registration_editText_id"
                   android:layout_width="150dp"
                   android:layout_height="40dp"
                   android:layout_gravity="center"
                   android:inputType="textShortMessage"
                   android:hint="@string/registration_editText_hint_id"/>

        <EditText  android:id="@+id/registration_editText_password"
                   android:layout_width="150dp"
                   android:layout_height="40dp"
                   android:layout_gravity="center"
                   android:inputType="textPassword"
                   android:hint="@string/registration_editText_hint_password"/>

        <EditText  android:id="@+id/registration_editText_name"
                   android:layout_width="150dp"
                   android:layout_height="40dp"
                   android:layout_gravity="center"
                   android:inputType="textShortMessage"
                   android:hint="@string/registration_editText_hint_name"/>

        <RadioGroup
                android:id="@+id/registration_radioGroup_gender"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/registration_radioGroup_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:hint="@string/registration_radioButton_gender_male"/>

            <RadioButton
                    android:id="@+id/registration_radioGroup_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_radioButton_gender_female"/>
        </RadioGroup>

        <RadioGroup
                android:id="@+id/registration_radioGroup_type"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/registration_radioGroup_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:hint="@string/registration_radioButton_type_student"/>

            <RadioButton
                    android:id="@+id/registration_radioGroup_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_radioButton_type_teacher"/>
        </RadioGroup>

        <EditText  android:id="@+id/registration_editText_phone"
                   android:layout_width="150dp"
                   android:layout_height="40dp"
                   android:layout_gravity="center"
                   android:inputType="phone"
                   android:enabled="false"/>

        <Button android:id="@+id/registration_button_confirm" android:layout_height="40dp" android:layout_width="150dp" android:text="@string/registration_button_confirm" android:textColor="#ffffff"/>

        <TextView android:id="@+id/registration_textView_msg"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#84c4d2"
                  android:textSize="20dp"
                  android:paddingRight="20dp"
                  android:textStyle="bold|italic"/>
</LinearLayout>